--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇩🇪 德国-428.3KB/s(Youtube:不良林), server: 165.22.73.126, port: 23335, type: ss, cipher: aes-256-cfb, password: 7d99ae502227454ea998d71e4b62a388}
-  - {name: 🇯🇵 日本-3.62MB/s(Youtube:不良林), server: 85.208.108.20, port: 5601, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇯🇵 日本-3.13MB/s(Youtube:不良林), server: 85.208.108.94, port: 5004, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
-  - {name: 🇺🇸 美国-2.54MB/s(Youtube:不良林), server: 172.99.188.71, port: 3389, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇨🇳 中国-241.8KB/s(Youtube:不良林), server: 120.233.150.146, port: 65095, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 120.233.150.146}}
+  - {name: 🇸🇬 新加坡-334.7KB/s(Youtube:不良林), server: 51.79.177.159, port: 8009, type: ss, cipher: aes-256-gcm, password: XKFKl2rULjIp74}
+  - {name: 🇨🇦 加拿大-904.1KB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇺🇸 美国-683.0KB/s(Youtube:不良林), server: azgy001.xiba1.xyz, port: 20711, type: trojan, password: 7497242f-3044-3c77-bf48-14bb26c92a83, sni: azgy001.xiba1.xyz, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-1.99MB/s(Youtube:不良林), server: 172.99.188.71, port: 443, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
+  - {name: 🇫🇷 法国-869.2KB/s(Youtube:不良林), server: 62.210.113.98, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
   - {name: 🇫🇷 法国-842.8KB/s(Youtube:不良林), server: 195.154.200.150, port: 2376, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
   - {name: 🇬🇧 英国-849.3KB/s(Youtube:不良林), server: 178.62.16.161, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
   - {name: 🇯🇵 日本-3.54MB/s(Youtube:不良林), server: 85.208.108.20, port: 6697, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇩🇪 德国-428.3KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.62MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.13MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.54MB/s(Youtube:不良林)
-      - 🇨🇳 中国-241.8KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-334.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-904.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-683.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.99MB/s(Youtube:不良林)
+      - 🇫🇷 法国-869.2KB/s(Youtube:不良林)
       - 🇫🇷 法国-842.8KB/s(Youtube:不良林)
       - 🇬🇧 英国-849.3KB/s(Youtube:不良林)
       - 🇯🇵 日本-3.54MB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇩🇪 德国-428.3KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.62MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.13MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.54MB/s(Youtube:不良林)
-      - 🇨🇳 中国-241.8KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-334.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-904.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-683.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.99MB/s(Youtube:不良林)
+      - 🇫🇷 法国-869.2KB/s(Youtube:不良林)
       - 🇫🇷 法国-842.8KB/s(Youtube:不良林)
       - 🇬🇧 英国-849.3KB/s(Youtube:不良林)
       - 🇯🇵 日本-3.54MB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇩🇪 德国-428.3KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.62MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.13MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.54MB/s(Youtube:不良林)
-      - 🇨🇳 中国-241.8KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-334.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-904.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-683.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.99MB/s(Youtube:不良林)
+      - 🇫🇷 法国-869.2KB/s(Youtube:不良林)
       - 🇫🇷 法国-842.8KB/s(Youtube:不良林)
       - 🇬🇧 英国-849.3KB/s(Youtube:不良林)
       - 🇯🇵 日本-3.54MB/s(Youtube:不良林)
@@ -72,11 +72,11 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇩🇪 德国-428.3KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.62MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.13MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.54MB/s(Youtube:不良林)
-      - 🇨🇳 中国-241.8KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-334.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-904.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-683.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.99MB/s(Youtube:不良林)
+      - 🇫🇷 法国-869.2KB/s(Youtube:不良林)
       - 🇫🇷 法国-842.8KB/s(Youtube:不良林)
       - 🇬🇧 英国-849.3KB/s(Youtube:不良林)
       - 🇯🇵 日本-3.54MB/s(Youtube:不良林)
@@ -87,11 +87,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇩🇪 德国-428.3KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.62MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.13MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.54MB/s(Youtube:不良林)
-      - 🇨🇳 中国-241.8KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-334.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-904.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-683.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.99MB/s(Youtube:不良林)
+      - 🇫🇷 法国-869.2KB/s(Youtube:不良林)
       - 🇫🇷 法国-842.8KB/s(Youtube:不良林)
       - 🇬🇧 英国-849.3KB/s(Youtube:不良林)
       - 🇯🇵 日本-3.54MB/s(Youtube:不良林)
@@ -103,11 +103,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇩🇪 德国-428.3KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.62MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.13MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.54MB/s(Youtube:不良林)
-      - 🇨🇳 中国-241.8KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-334.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-904.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-683.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.99MB/s(Youtube:不良林)
+      - 🇫🇷 法国-869.2KB/s(Youtube:不良林)
       - 🇫🇷 法国-842.8KB/s(Youtube:不良林)
       - 🇬🇧 英国-849.3KB/s(Youtube:不良林)
       - 🇯🇵 日本-3.54MB/s(Youtube:不良林)
@@ -128,11 +128,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇩🇪 德国-428.3KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.62MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.13MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.54MB/s(Youtube:不良林)
-      - 🇨🇳 中国-241.8KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-334.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-904.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-683.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.99MB/s(Youtube:不良林)
+      - 🇫🇷 法国-869.2KB/s(Youtube:不良林)
       - 🇫🇷 法国-842.8KB/s(Youtube:不良林)
       - 🇬🇧 英国-849.3KB/s(Youtube:不良林)
       - 🇯🇵 日本-3.54MB/s(Youtube:不良林)
