--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇸🇬 新加坡-334.7KB/s(Youtube:不良林), server: 51.79.177.159, port: 8009, type: ss, cipher: aes-256-gcm, password: XKFKl2rULjIp74}
-  - {name: 🇨🇦 加拿大-904.1KB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇺🇸 美国-683.0KB/s(Youtube:不良林), server: azgy001.xiba1.xyz, port: 20711, type: trojan, password: 7497242f-3044-3c77-bf48-14bb26c92a83, sni: azgy001.xiba1.xyz, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-1.99MB/s(Youtube:不良林), server: 172.99.188.71, port: 443, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
-  - {name: 🇫🇷 法国-869.2KB/s(Youtube:不良林), server: 62.210.113.98, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
-  - {name: 🇫🇷 法国-842.8KB/s(Youtube:不良林), server: 195.154.200.150, port: 2376, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
-  - {name: 🇬🇧 英国-849.3KB/s(Youtube:不良林), server: 178.62.16.161, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇯🇵 日本-3.54MB/s(Youtube:不良林), server: 85.208.108.20, port: 6697, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
-  - {name: 🇯🇵 日本-2.75MB/s(Youtube:不良林), server: 85.208.108.20, port: 6379, type: ss, cipher: aes-256-gcm, password: zDNVedRFPQexG9v}
+  - {name: 🇯🇵 日本-1.88MB/s(Youtube:不良林), server: 85.208.108.20, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
+  - {name: 🇩🇪 德国-1.62MB/s(Youtube:不良林), server: 193.108.117.75, port: 5001, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇩🇪 德国-1.45MB/s(Youtube:不良林), server: 193.108.117.75, port: 8881, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
+  - {name: 🇨🇳 中国-240.8KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34003, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-3.58MB/s(Youtube:不良林), server: 85.208.108.94, port: 5004, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
   - {name: 🇺🇸 美国-1.28MB/s(Youtube:不良林), server: 5.188.0.151, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇫🇷 法国-1.20MB/s(Youtube:不良林), server: 51.38.118.42, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇺🇸 美国-4.18MB/s(Youtube:不良林), server: azgy001.xiba1.xyz, port: 20713, type: trojan, password: 7497242f-3044-3c77-bf48-14bb26c92a83, sni: azgy001.xiba1.xyz, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-2.74MB/s(Youtube:不良林), server: 85.208.108.93, port: 6379, type: ss, cipher: aes-256-gcm, password: zDNVedRFPQexG9v}
+  - {name: 🇯🇵 日本-2.12MB/s(Youtube:不良林), server: 85.208.108.93, port: 7002, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇸🇬 新加坡-334.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-904.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-683.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.99MB/s(Youtube:不良林)
-      - 🇫🇷 法国-869.2KB/s(Youtube:不良林)
-      - 🇫🇷 法国-842.8KB/s(Youtube:不良林)
-      - 🇬🇧 英国-849.3KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.54MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.75MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.88MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.62MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.45MB/s(Youtube:不良林)
+      - 🇨🇳 中国-240.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.58MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.28MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.20MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.18MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.74MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.12MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇸🇬 新加坡-334.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-904.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-683.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.99MB/s(Youtube:不良林)
-      - 🇫🇷 法国-869.2KB/s(Youtube:不良林)
-      - 🇫🇷 法国-842.8KB/s(Youtube:不良林)
-      - 🇬🇧 英国-849.3KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.54MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.75MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.88MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.62MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.45MB/s(Youtube:不良林)
+      - 🇨🇳 中国-240.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.58MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.28MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.20MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.18MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.74MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.12MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇸🇬 新加坡-334.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-904.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-683.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.99MB/s(Youtube:不良林)
-      - 🇫🇷 法国-869.2KB/s(Youtube:不良林)
-      - 🇫🇷 法国-842.8KB/s(Youtube:不良林)
-      - 🇬🇧 英国-849.3KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.54MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.75MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.88MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.62MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.45MB/s(Youtube:不良林)
+      - 🇨🇳 中国-240.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.58MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.28MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.20MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.18MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.74MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.12MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇸🇬 新加坡-334.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-904.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-683.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.99MB/s(Youtube:不良林)
-      - 🇫🇷 法国-869.2KB/s(Youtube:不良林)
-      - 🇫🇷 法国-842.8KB/s(Youtube:不良林)
-      - 🇬🇧 英国-849.3KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.54MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.75MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.88MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.62MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.45MB/s(Youtube:不良林)
+      - 🇨🇳 中国-240.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.58MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.28MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.20MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.18MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.74MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.12MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇸🇬 新加坡-334.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-904.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-683.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.99MB/s(Youtube:不良林)
-      - 🇫🇷 法国-869.2KB/s(Youtube:不良林)
-      - 🇫🇷 法国-842.8KB/s(Youtube:不良林)
-      - 🇬🇧 英国-849.3KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.54MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.75MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.88MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.62MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.45MB/s(Youtube:不良林)
+      - 🇨🇳 中国-240.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.58MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.28MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.20MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.18MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.74MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.12MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇸🇬 新加坡-334.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-904.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-683.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.99MB/s(Youtube:不良林)
-      - 🇫🇷 法国-869.2KB/s(Youtube:不良林)
-      - 🇫🇷 法国-842.8KB/s(Youtube:不良林)
-      - 🇬🇧 英国-849.3KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.54MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.75MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.88MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.62MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.45MB/s(Youtube:不良林)
+      - 🇨🇳 中国-240.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.58MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.28MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.20MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.18MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.74MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.12MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇸🇬 新加坡-334.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-904.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-683.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.99MB/s(Youtube:不良林)
-      - 🇫🇷 法国-869.2KB/s(Youtube:不良林)
-      - 🇫🇷 法国-842.8KB/s(Youtube:不良林)
-      - 🇬🇧 英国-849.3KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.54MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.75MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.88MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.62MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.45MB/s(Youtube:不良林)
+      - 🇨🇳 中国-240.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.58MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.28MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.20MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.18MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.74MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.12MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
