--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇯🇵 日本-1.88MB/s(Youtube:不良林), server: 85.208.108.20, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
-  - {name: 🇩🇪 德国-1.62MB/s(Youtube:不良林), server: 193.108.117.75, port: 5001, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇩🇪 德国-1.45MB/s(Youtube:不良林), server: 193.108.117.75, port: 8881, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
-  - {name: 🇨🇳 中国-240.8KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34003, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-3.58MB/s(Youtube:不良林), server: 85.208.108.94, port: 5004, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
-  - {name: 🇺🇸 美国-1.28MB/s(Youtube:不良林), server: 5.188.0.151, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇫🇷 法国-1.20MB/s(Youtube:不良林), server: 51.38.118.42, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇺🇸 美国-4.18MB/s(Youtube:不良林), server: azgy001.xiba1.xyz, port: 20713, type: trojan, password: 7497242f-3044-3c77-bf48-14bb26c92a83, sni: azgy001.xiba1.xyz, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-2.74MB/s(Youtube:不良林), server: 85.208.108.93, port: 6379, type: ss, cipher: aes-256-gcm, password: zDNVedRFPQexG9v}
+  - {name: 🇨🇳 中国-518.7KB/s(Youtube:不良林), server: best01.downloadmovie.cn, port: 65076, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best01.downloadmovie.cn}}
+  - {name: 🇩🇪 德国-966.8KB/s(Youtube:不良林), server: 193.108.117.75, port: 9102, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
+  - {name: 🇯🇵 日本-2.95MB/s(Youtube:不良林), server: 85.208.108.94, port: 8881, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
+  - {name: 🇩🇪 德国-1.07MB/s(Youtube:不良林), server: 165.22.73.126, port: 23335, type: ss, cipher: aes-256-cfb, password: 7d99ae502227454ea998d71e4b62a388}
+  - {name: 🇩🇪 德国-1.52MB/s(Youtube:不良林), server: 193.108.117.75, port: 8090, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
   - {name: 🇯🇵 日本-2.12MB/s(Youtube:不良林), server: 85.208.108.93, port: 7002, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
+  - {name: 🇯🇵 日本-3.57MB/s(Youtube:不良林), server: 85.208.108.20, port: 7002, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
+  - {name: 🇯🇵 日本-3.47MB/s(Youtube:不良林), server: 85.208.108.93, port: 7306, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
+  - {name: 🇺🇸 美国-510.9KB/s(Youtube:不良林), server: 92.38.176.81, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇺🇸 美国-1.74MB/s(Youtube:不良林), server: 169.197.141.5, port: 3306, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-1.88MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.62MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.45MB/s(Youtube:不良林)
-      - 🇨🇳 中国-240.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.58MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.28MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.20MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.18MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.74MB/s(Youtube:不良林)
+      - 🇨🇳 中国-518.7KB/s(Youtube:不良林)
+      - 🇩🇪 德国-966.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.95MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.07MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.52MB/s(Youtube:不良林)
       - 🇯🇵 日本-2.12MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.57MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.47MB/s(Youtube:不良林)
+      - 🇺🇸 美国-510.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.74MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇯🇵 日本-1.88MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.62MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.45MB/s(Youtube:不良林)
-      - 🇨🇳 中国-240.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.58MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.28MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.20MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.18MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.74MB/s(Youtube:不良林)
+      - 🇨🇳 中国-518.7KB/s(Youtube:不良林)
+      - 🇩🇪 德国-966.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.95MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.07MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.52MB/s(Youtube:不良林)
       - 🇯🇵 日本-2.12MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.57MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.47MB/s(Youtube:不良林)
+      - 🇺🇸 美国-510.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.74MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-1.88MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.62MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.45MB/s(Youtube:不良林)
-      - 🇨🇳 中国-240.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.58MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.28MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.20MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.18MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.74MB/s(Youtube:不良林)
+      - 🇨🇳 中国-518.7KB/s(Youtube:不良林)
+      - 🇩🇪 德国-966.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.95MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.07MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.52MB/s(Youtube:不良林)
       - 🇯🇵 日本-2.12MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.57MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.47MB/s(Youtube:不良林)
+      - 🇺🇸 美国-510.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.74MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇯🇵 日本-1.88MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.62MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.45MB/s(Youtube:不良林)
-      - 🇨🇳 中国-240.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.58MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.28MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.20MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.18MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.74MB/s(Youtube:不良林)
+      - 🇨🇳 中国-518.7KB/s(Youtube:不良林)
+      - 🇩🇪 德国-966.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.95MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.07MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.52MB/s(Youtube:不良林)
       - 🇯🇵 日本-2.12MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.57MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.47MB/s(Youtube:不良林)
+      - 🇺🇸 美国-510.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.74MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇯🇵 日本-1.88MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.62MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.45MB/s(Youtube:不良林)
-      - 🇨🇳 中国-240.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.58MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.28MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.20MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.18MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.74MB/s(Youtube:不良林)
+      - 🇨🇳 中国-518.7KB/s(Youtube:不良林)
+      - 🇩🇪 德国-966.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.95MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.07MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.52MB/s(Youtube:不良林)
       - 🇯🇵 日本-2.12MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.57MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.47MB/s(Youtube:不良林)
+      - 🇺🇸 美国-510.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.74MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-1.88MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.62MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.45MB/s(Youtube:不良林)
-      - 🇨🇳 中国-240.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.58MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.28MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.20MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.18MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.74MB/s(Youtube:不良林)
+      - 🇨🇳 中国-518.7KB/s(Youtube:不良林)
+      - 🇩🇪 德国-966.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.95MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.07MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.52MB/s(Youtube:不良林)
       - 🇯🇵 日本-2.12MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.57MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.47MB/s(Youtube:不良林)
+      - 🇺🇸 美国-510.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.74MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-1.88MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.62MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.45MB/s(Youtube:不良林)
-      - 🇨🇳 中国-240.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.58MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.28MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.20MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.18MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.74MB/s(Youtube:不良林)
+      - 🇨🇳 中国-518.7KB/s(Youtube:不良林)
+      - 🇩🇪 德国-966.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.95MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.07MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.52MB/s(Youtube:不良林)
       - 🇯🇵 日本-2.12MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.57MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.47MB/s(Youtube:不良林)
+      - 🇺🇸 美国-510.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.74MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
