--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-518.7KB/s(Youtube:不良林), server: best01.downloadmovie.cn, port: 65076, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best01.downloadmovie.cn}}
-  - {name: 🇩🇪 德国-966.8KB/s(Youtube:不良林), server: 193.108.117.75, port: 9102, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
-  - {name: 🇯🇵 日本-2.95MB/s(Youtube:不良林), server: 85.208.108.94, port: 8881, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
-  - {name: 🇩🇪 德国-1.07MB/s(Youtube:不良林), server: 165.22.73.126, port: 23335, type: ss, cipher: aes-256-cfb, password: 7d99ae502227454ea998d71e4b62a388}
-  - {name: 🇩🇪 德国-1.52MB/s(Youtube:不良林), server: 193.108.117.75, port: 8090, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
-  - {name: 🇯🇵 日本-2.12MB/s(Youtube:不良林), server: 85.208.108.93, port: 7002, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
+  - {name: 🇺🇸 美国-735.5KB/s(Youtube:不良林), server: 5.188.0.151, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇦 加拿大-868.9KB/s(Youtube:不良林), server: 196.247.59.154, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
   - {name: 🇯🇵 日本-3.57MB/s(Youtube:不良林), server: 85.208.108.20, port: 7002, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
-  - {name: 🇯🇵 日本-3.47MB/s(Youtube:不良林), server: 85.208.108.93, port: 7306, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
+  - {name: 🇩🇪 德国-1.18MB/s(Youtube:不良林), server: 193.108.117.75, port: 443, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
   - {name: 🇺🇸 美国-510.9KB/s(Youtube:不良林), server: 92.38.176.81, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇺🇸 美国-1.74MB/s(Youtube:不良林), server: 169.197.141.5, port: 3306, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇺🇸 美国-2.92MB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇨🇳 中国-302.7KB/s(Youtube:不良林), server: 116.129.254.177, port: 65007, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
+  - {name: 🇨🇳 中国-438.8KB/s(Youtube:不良林), server: 120.233.150.146, port: 65073, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 120.233.150.146}}
+  - {name: 🇨🇳 中国-419.5KB/s(Youtube:不良林), server: best04.downloadmovie.cn, port: 65089, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best04.downloadmovie.cn}}
+  - {name: 🇨🇳 中国-381.5KB/s(Youtube:不良林), server: best01.downloadmovie.cn, port: 65073, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best01.downloadmovie.cn}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-518.7KB/s(Youtube:不良林)
-      - 🇩🇪 德国-966.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.95MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.07MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.52MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.12MB/s(Youtube:不良林)
+      - 🇺🇸 美国-735.5KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-868.9KB/s(Youtube:不良林)
       - 🇯🇵 日本-3.57MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.47MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.18MB/s(Youtube:不良林)
       - 🇺🇸 美国-510.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.74MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.92MB/s(Youtube:不良林)
+      - 🇨🇳 中国-302.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-438.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-419.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-381.5KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-518.7KB/s(Youtube:不良林)
-      - 🇩🇪 德国-966.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.95MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.07MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.52MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.12MB/s(Youtube:不良林)
+      - 🇺🇸 美国-735.5KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-868.9KB/s(Youtube:不良林)
       - 🇯🇵 日本-3.57MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.47MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.18MB/s(Youtube:不良林)
       - 🇺🇸 美国-510.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.74MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.92MB/s(Youtube:不良林)
+      - 🇨🇳 中国-302.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-438.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-419.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-381.5KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-518.7KB/s(Youtube:不良林)
-      - 🇩🇪 德国-966.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.95MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.07MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.52MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.12MB/s(Youtube:不良林)
+      - 🇺🇸 美国-735.5KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-868.9KB/s(Youtube:不良林)
       - 🇯🇵 日本-3.57MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.47MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.18MB/s(Youtube:不良林)
       - 🇺🇸 美国-510.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.74MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.92MB/s(Youtube:不良林)
+      - 🇨🇳 中国-302.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-438.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-419.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-381.5KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-518.7KB/s(Youtube:不良林)
-      - 🇩🇪 德国-966.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.95MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.07MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.52MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.12MB/s(Youtube:不良林)
+      - 🇺🇸 美国-735.5KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-868.9KB/s(Youtube:不良林)
       - 🇯🇵 日本-3.57MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.47MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.18MB/s(Youtube:不良林)
       - 🇺🇸 美国-510.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.74MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.92MB/s(Youtube:不良林)
+      - 🇨🇳 中国-302.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-438.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-419.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-381.5KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-518.7KB/s(Youtube:不良林)
-      - 🇩🇪 德国-966.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.95MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.07MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.52MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.12MB/s(Youtube:不良林)
+      - 🇺🇸 美国-735.5KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-868.9KB/s(Youtube:不良林)
       - 🇯🇵 日本-3.57MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.47MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.18MB/s(Youtube:不良林)
       - 🇺🇸 美国-510.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.74MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.92MB/s(Youtube:不良林)
+      - 🇨🇳 中国-302.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-438.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-419.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-381.5KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-518.7KB/s(Youtube:不良林)
-      - 🇩🇪 德国-966.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.95MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.07MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.52MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.12MB/s(Youtube:不良林)
+      - 🇺🇸 美国-735.5KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-868.9KB/s(Youtube:不良林)
       - 🇯🇵 日本-3.57MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.47MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.18MB/s(Youtube:不良林)
       - 🇺🇸 美国-510.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.74MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.92MB/s(Youtube:不良林)
+      - 🇨🇳 中国-302.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-438.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-419.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-381.5KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-518.7KB/s(Youtube:不良林)
-      - 🇩🇪 德国-966.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.95MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.07MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.52MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.12MB/s(Youtube:不良林)
+      - 🇺🇸 美国-735.5KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-868.9KB/s(Youtube:不良林)
       - 🇯🇵 日本-3.57MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.47MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.18MB/s(Youtube:不良林)
       - 🇺🇸 美国-510.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.74MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.92MB/s(Youtube:不良林)
+      - 🇨🇳 中国-302.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-438.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-419.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-381.5KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
